src/test/deca/lexicographie/invalid/sansObjet/invalid_caracter7.deca
{
    float x = 0.2333;
    println("Hello");
    ^
}